# pyRegularExpression

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  python-tests.yml
tests/: test_adherence_compliance_finder.py  test_algorithm_validation_finder.py  test_allocation_concealment_finder.py  test_attrition_criteria_finder.py  test_background_rationale_finder.py  test_baseline_data_finder.py  test_blinding_masking_finder.py  test_changes_to_outcomes_finder.py  test_comparator_cohort_finder.py  test_competing_risk_analysis_finder.py  test_conflict_of_interest_finder.py  test_data_access_finder.py  test_data_linkage_method_finder.py  test_data_provenance_finder.py  test_data_safety_monitoring_finder.py  test_data_sharing_statement_finder.py  test_data_source_type_finder.py  test_demographic_restriction_finder.py  test_dose_response_analysis_finder.py  test_eligibility_criteria_finder.py  test_entry_event_finder.py  test_event_adjudication_finder.py  test_exclusion_rule_finder.py  test_exit_criterion_finder.py  test_exposure_definition_finder.py  test_extract_regex_paragraphs_udf.py  test_follow_up_period_finder.py  test_funding_statement_finder.py  test_generalizability_finder.py  test_harms_adverse_event_finder.py  test_healthcare_setting_finder.py  test_inclusion_rule_finder.py  test_index_date_finder.py  test_interim_analysis_stopping_rules_finder.py  test_interventions_finder.py  test_limitations_finder.py  test_losses_exclusion_finder.py  test_med_cohort.py  test_medical_code_extractor.py  test_medical_code_finder.py  (+28 more)
(+68 files in other folders)
